@@ -3,6 +3,7 @@
 = DDT Change Log =
 
 == DDT 0.9.1 ===
+ * UI cleanup: "Interpreter Container" now named "D Standard Library"
  * Fixed issue #20: GDC incluce/d/*/ library location layout not recognized
 
 == DDT 0.9.0 (2013-11-14) ==
